# scripthookv-linux-template

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: ScriptHookV.cmake
src/: main.cpp
